Adding responsive styles

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
       <h2>Our Plants</h2>
       <div class="container">
         <!--Big div that wraps around little boxes-->
-        <div class="bgImg succulants">
+        <div class="bgImg succulants one">
           <!--empty - will add bg image in CSS-->
         </div>
-        <div class="shopText">
+        <div class="shopText two">
           <div>
             <h3>Succulants</h3>
             <p>
@@ -60,7 +60,7 @@
             <button>Shop Now!</button>
           </div>
         </div>
-        <div class="shopText">
+        <div class="shopText four">
           <div>
             <h3>Cacti</h3>
             <p>
@@ -72,13 +72,13 @@
             <button>Shop Now!</button>
           </div>
         </div>
-        <div class="bgImg cacti">
+        <div class="bgImg cacti three">
           <!--empty div - will add bg image in css-->
         </div>
-        <div class="bgImg tropicals">
+        <div class="bgImg tropicals five">
           <!--empty div - will add bg image in css-->
         </div>
-        <div class="shopText">
+        <div class="shopText six">
           <div>
             <h3>Tropicals</h3>
             <p>
